<resources>
    <string name="app_name">Bard</string>

    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_save">Save</string>
    <string name="edit_message">Type or click word</string>
    <string name="button_send">Send</string>
    <string name="button_keyboard">Keyboard</string>
    <string name="button_word_list">Word List</string>
    <string name="title_activity_save">Share</string>
    <string name="title_index">Choose a Character</string>
    <string name="title_project_list">My Projects</string>
    <string name="button_play_video">Play Video</string>
    <string name="button_play_all">Generate</string>
    <string name="no_network_connection">No network connection. </string>
    <string-array name="scene_search_types">
        <item>Words</item>
        <item>Title</item>
    </string-array>
    <string-array name="drawer_items">
        <item>Create</item>
        <item>Explore</item>
        <item>My Projects</item>
        <item>Favorites</item>
        <item>About</item>
    </string-array>
    <string-array name="bard_input_modes">
        <item>a</item>
        <item>b</item>
        <item>c</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="share">Share</string>
    <string name="find_prev_string">Previous</string>
    <string name="find_next_string">Next</string>
    <string name="my_projects_string">Projects</string>
    <string name="create_string">Create</string>
    <string name="new_bard">New Bard</string>
    <string name="settings_string">Settings</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="choose_character">My Packs</string>
    <string name="choose_scene">Choose Video</string>
    <string name="feedback_btn_string">Give Feedback</string>
    <string name="bard_library">My Bards</string>
    <string name="compose">Compose</string>
    <string name="empty_state_repo_title"></string>
    <string name="empty_state_repo_description">You have no videos yet</string>
    <string name="empty_state_no_internet_title">No Connection</string>
    <string name="empty_state_no_internet_description">You are offline. Please try again when you are connected to the internet</string>
    <string name="tell_friend">Invite Friends</string>
    <string name="feedback">Feedback</string>
    <string name="follow_facebook">Follow us on Facebook</string>
    <string name="follow_twitter">Follow us on Twitter</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="agree_to_terms_description">
        <![CDATA[by signing up, you agree to the <a href="https://bard.co/terms">Terms of Use</a> and <a href="https://bard.co/privacy">Privacy Policy</a>]]></string>
    <string name="scene_select">Scene Select</string>
    <string name="close_editor">close</string>
    <string name="back">back</string>
    <string name="copy_link">Copy Link</string>
    <string name="delete">Delete</string>
    <string name="click_to_login">Click to Login</string>
    <string name="publish_repo">Publish</string>
    <string name="my_packs">Packs</string>
    <string name="my_channels">Channels</string>
    <string name="my_likes">My Likes</string>
</resources>
