<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/profile_header"
                  android:orientation="vertical"
                  android:background="@color/dark_gray"
                  android:layout_width="match_parent"
                  android:layout_height="200dp">

        <com.mikepenz.materialdrawer.view.BezelImageView
                android:id="@+id/profile_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/avatar_placeholder"
                android:layout_gravity="center"
                android:clickable="false"
                android:elevation="1dp" />

        <TextView
                android:id="@+id/profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="username"/>
        <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="email"/>
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/profile_details"
                  android:background="@color/iron"
                  android:layout_width="match_parent"
                  android:paddingTop="15dp"
                  android:layout_weight="1"
                  android:layout_height="0dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/feedback_row"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_detail_row"
                    android:onClick="onFeedbackRowClick"
                    android:textSize="18sp"
                    android:text="@string/feedback"/>
            <TextView
                    android:id="@+id/tell_friend_row"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_detail_row"
                    android:onClick="onTellFriendRowClick"
                    android:textSize="18sp"
                    android:text="@string/tell_friend"/>
            <TextView
                    android:id="@+id/follow_facebook_row"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:onClick="onFollowFacebookRowClick"
                    android:background="@drawable/profile_detail_row"
                    android:textSize="18sp"
                    android:text="@string/follow_facebook"/>
            <TextView
                    android:id="@+id/follow_twitter_row"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:onClick="onFollowTwitterRowClick"
                    android:background="@drawable/profile_detail_row"
                    android:textSize="18sp"
                    android:text="@string/follow_twitter"/>
            <TextView
                    android:id="@+id/about_row"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:padding="10dp"
                    android:onClick="onAboutRowClick"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_detail_row"
                    android:textSize="18sp"
                    android:text="@string/about"/>
            <TextView
                    android:id="@+id/privacy_row"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:onClick="onPrivacyRowClick"
                    android:background="@drawable/profile_detail_row"
                    android:textSize="18sp"
                    android:text="@string/privacy_policy"/>
            <TextView
                    android:id="@+id/logout_row"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:onClick="onLogoutRowClick"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_detail_row"
                    android:textSize="18sp"
                    android:text="@string/logout"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
