<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/editor_root_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
>
    <RelativeLayout
            android:id="@+id/input_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/video_result_header"
                        android:layout_alignParentTop="true"
                        android:background="@color/purple"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
            <ImageView
                    android:id="@+id/video_result_back_btn"
                    android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
                    android:onClick="showWordListFragment"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back"/>
            <TextView
                    android:id="@+id/repo_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:visibility="visible"
                    android:text="asdf"
                    android:textColor="@color/white"
                    android:layout_weight="1"
            />

            <ImageView
                    android:id="@+id/repo_share_btn"
                    android:src="@drawable/ic_share_white_24dp"
                    android:onClick="shareRepo"
                    android:paddingLeft="3dp"
                    android:paddingRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back"/>
        </LinearLayout>

        <LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/preview_timeline_container"
                        android:background="@color/black"
                        android:layout_below="@id/video_result_header"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
            <ImageView
                    android:id="@+id/close_editor_btn"
                    android:src="@drawable/ic_clear_white_24dp"
                    android:onClick="closeEditor"
                    android:paddingLeft="8dp"
                    android:paddingRight="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/close_editor"/>

            <HorizontalScrollView
                    android:id="@+id/preview_timeline_scrollview"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
            >
                <LinearLayout
                        android:id="@+id/preview_timeline"
                        android:background="@color/iron"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >
                    <!-- child views in here -->
                </LinearLayout>
            </HorizontalScrollView>

            <Button
                    android:id="@+id/play_message_btn"
                    android:onClick="generateBardVideo"
                    android:enabled="false"
                    android:background="@drawable/selector_play_all"
                    android:textColor="@color/white"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:minWidth="70dp"
                    android:textAllCaps="false"
                    android:text="@string/button_play_all"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp" />

        </LinearLayout>



        <FrameLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                       xmlns:tools="http://schemas.android.com/tools"
                       android:id="@+id/vp_pager_container"
                       android:layout_below="@id/preview_timeline_container"
                       android:layout_width="fill_parent"
                       android:layout_height="200dp"
                       android:orientation="vertical"
                       android:gravity="center_vertical|center_horizontal"
        >

            <com.roplabs.bard.ui.widget.InputViewPager
                    android:id="@+id/vpPager"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
            </com.roplabs.bard.ui.widget.InputViewPager>

            <TextView android:id="@+id/display_debug"
                      android:layout_gravity = "center_vertical|center_horizontal"
                      android:textColor="@color/white"
                      android:layout_marginTop="30dp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>

            <ProgressBar
                    android:id="@+id/query_video_progress_bar"
                    android:layout_gravity = "center_vertical|center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
            />

            <ImageView
                    android:id="@+id/btn_find_prev"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:tint="@color/md_grey_500"
                    android:background="@drawable/word_tag_navigator_left"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/find_prev_string"/>

            <ImageView
                    android:id="@+id/btn_find_next"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:tint="@color/md_grey_500"
                    android:layout_gravity="center_vertical|right"
                    android:background="@drawable/word_tag_navigator_right"
                    android:paddingLeft="3dp"
                    android:paddingRight="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/find_next_string"/>


        </FrameLayout>


        <LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/bard_text_entry"
                        android:layout_below="@id/vp_pager_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
        >

            <ImageView
                    android:id="@+id/scene_select_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="5dp"
                    android:onClick="startSceneSelect"
                    android:alpha="0.3"
                    android:src="@drawable/ic_crop_original_black_24dp"
                    android:contentDescription="@string/scene_select"/>


            <com.roplabs.bard.ui.widget.WordsAutoCompleteTextView android:id="@+id/edit_message"
                                                                  android:layout_width="0dp"
                                                                  android:layout_marginLeft="0dp"
                                                                  android:layout_marginStart="5dp"
                                                                  android:textSize="12sp"
                                                                  android:layout_marginRight="5dp"
                                                                  android:layout_height="wrap_content"
                                                                  android:layout_weight="1"
                                                                  android:background="@android:color/transparent"
                                                                  android:completionThreshold="1"
                                                                  android:inputType="textNoSuggestions"
                                                                  android:hint="@string/edit_message"/>

            <ImageView
                    android:id="@+id/toggleWordListBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="toggleWordList"
                    android:alpha="0.3"
                    android:src="@drawable/ic_keyboard_black_24dp"
                    android:contentDescription="@string/button_keyboard"/>



        </LinearLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/word_list_dictionary"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:background="@drawable/word_choice_background"
                android:layout_below="@id/bard_text_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <LinearLayout android:id="@+id/video_result_content"
                      android:visibility="gone"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_below="@id/bard_text_entry"
                      android:layout_alignParentBottom="true"
        >
        </LinearLayout>



    </RelativeLayout>


</LinearLayout>

